--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -92,3 +92,25 @@ button {
     color: #721c24;
     background-color: #f8d7da;
 }
+#header_menu {
+    width: 57%;
+    padding-top: 17px;
+    padding-left: 3%;
+    display: inline-block;
+}
+
+#employee_name {
+    color: #cccccc;
+    width: 36%;
+    padding-right: 3%;
+    text-align: right;
+    display: inline-block;
+}
+
+#header a {
+    color: #eeeeee;
+}
+
+h1 a {
+    color: #eeeeee;
+}
