--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -114,6 +114,12 @@ button {
 h1 a {
     color: #eeeeee;
 }
+
+h1 {
+    font-size: 24px;
+    display: inline;
+}
+
 table#report_list th {
     font-weight: bold;
     padding: 10px 2%;
